# LimbWorker

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  conanfile.txt  config.json
include/: app-config.h  capabilities-provider.h  image-processor.h  json-parser.h  limb-app.h  processor-loader.h  processor-module.h
include/amqp-handler/: amqp-handler.hpp
include/amqp-router/: amqp-router.hpp
include/app-tasks/: json-task-parser.hpp  task-parser.hpp  task-types.hpp
include/app-transport/: amqp-handler.hpp  amqp-transport.hpp
include/glslang/: build_info.h
include/image/: image-codec.hpp  image-types.h  image-utils.hpp  jpg-codec.hpp  png-codec.hpp
include/image-service/: data-models.hpp  image-processor-define.hpp  image-service.hpp  processor-initializer.hpp  processor-provider.hpp  processor-storage.hpp
include/media-repository/: media-repository.hpp  mongo-client.hpp
include/mongo-client/: mongo-client.hpp
include/ncnn-service/: ncnn-service-realesrgan.h  ncnn-service.h
include/stb-image/: stb_image.h  stb_image_write.h
include/thread-pool/: README.md  fixed-function.hpp  limb-queue.hpp  thread-pool-options.hpp  thread-pool.hpp  worker.hpp
include/transport/: transport.h
include/utils/: bithacks.h  callbacks.h  endian.h  estimate.h  files.h  image-info.h  status.h  stb-include.h  stb-wrap.h
models/: 4xNomos2_hq_mosr_fp32.ncnn.param  moso.param  readme.txt
processors/: CMakeLists.txt
processors/loopback/: CMakeLists.txt  loopback.cpp  loopback.h
processors/realesrgan/: CMakeLists.txt  realesrgan-processor.cpp  realesrgan-processor.h
processors/rmbg/: CMakeLists.txt  rmbg.cpp  rmbg.h
processors/rmbg/shaders/: rmbg_postproc.comp  rmbg_preproc.comp
processors/rmbg_1_4_cpu/: CMakeLists.txt  rmbg_1_4_cpu.cpp  rmbg_1_4_cpu.h
scripts/: conan_provider.cmake  cppcheck.py  format.py
src/: main.cpp  processor-loader.cpp
src/amqp-handler/: amqp-handler.cpp
src/amqp-router/: amqp-router.cpp
src/image-service/: data-models.cpp  image-service.cpp
src/internal/: capabilities-provider.cpp  processor-loader.cpp
src/internal/amqp-handler/: amqp-handler.cpp
src/internal/amqp-router/: amqp-router.cpp
src/internal/app-config/: config-factory.cpp  json-parser.cpp
src/internal/app-tasks/: json-task-parser.cpp  task-parser.cpp
src/internal/app-transport/: amqp-handler.cpp  amqp-transport.cpp
src/internal/image/: image-codec.cpp  jpg-codec.cpp  png-codec.cpp
src/internal/media-repository/: mongo-client.cpp
src/internal/utils/: files.cpp  stb-wrap.cpp
src/media-repository/: mongo-client.cpp
src/mongo-client/: mongo-client.cpp
src/ncnn-service/: ncnn-service-realesrgan.cpp  ncnn-service.cpp
tests/: CMakeLists.txt  abnet_simple.t.cpp  fixed_function.t.cpp  loopback_verify.t.cpp  rmbg_inference_parallel.t.cpp  run_inference.t.cpp  run_realesrgan.t.cpp  thread_pool.t.cpp
